[tool.poetry]
name = "roubo-de-renda-calc"
version = "0.1.0"
description = ""
authors = ["Paulo Moggi <paulohpmoggi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.9"
black = "^22.3.0"
isort = "^5.10.1"
ipython = "^8.3.0"
pytest = "^7.1.2"
safety = "^1.10.3"
radon = "^5.1.0"
coverage = "^6.4.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["app"]

[tool.black]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119

[tool.pylint.'MESSAGES CONTROL']
# confidence = "HIGH,CONTROL_FLOW,INFERENCE_FAILURE"
disable = ["missing-module-docstring", "line-too-long"]

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--disable-warnings"]
testpaths = ["app"]
